--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(picrun)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(picrun main.cpp bmp.cpp bmp.h defines.h vm.cpp vm.h)
+add_executable(picrun main.cpp bmp.cpp bmp.h defines.h vm.cpp vm.h main.h util.h)
